# pulse-model

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  LICENSE-DOCS.md  NOTICE  README.md  docusaurus.config.ts  package-lock.json  package.json
pulse_model/: author_and_citation.md  current_status.md  documentation_migration_map.md  frontier_strategy.md  h2_acceptance_report.md  index.md  known_physics_validation_report.md  promising_tweaks.md  proof_sequence.md  pulse_model_formalization.md  pyproject.toml  roadmap.md
pulse_model/appendix/: _category_.json  geometry_action_correction_phenomenology.md  geometry_action_oriented_loop_phase.md  geometry_action_pulse_record_curvature_estimator.md  geometry_action_spin_connection_holonomy.md  geometry_action_strengthening_pulse_network.md  geometry_phase_functional_from_pulse_consistency.md  h1_time_is_relational_pulse_count.md  h2_finite_data_stability_and_gauge.md  h2_finite_pulse_record_schema.md  h2_metric_reconstruction_from_pulse_comparisons.md  h2_raw_event_graph_reconstruction.md  h2_raw_relational_identifiability.md  h3_pulse_comparison_holonomy.md  h4_stress_energy_as_phase_response.md  h5_superposed_pulse_histories.md  h6_decohered_pulse_histories_classical_spacetime.md  h6_quantum_source_response_discriminator.md  h7_vacuum_phase_response.md  index.md  spin_connection_pulse_holonomy.md
pulse_model/evidence/: _category_.json  index.md  known_physics_validation.md
pulse_model/formal_model/: _category_.json  definitions_and_axioms.md  hypotheses_h1_h7.md  index.md  known_physics_recovery.md  references.md  (+2 more)
(+82 files in other folders)
