[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-model"
version = "0.1.0"
description = "Minimal computational API for Pulse Model known-physics checks."
requires-python = ">=3.14,<3.15"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
